--- a/index.html
+++ b/index.html
@@ -5,84 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #191919; /* Set the body background color */
-            margin: 0; /* Remove default margin */
-            padding: 0; /* Remove default padding */
-            overflow: hidden; /* Prevent scrollbars */
+            background-color: #191919; /* Matches the widget's background */
+            margin: 0; /* Remove default body margin */
+            padding: 0; /* Remove default body padding */
+            overflow: hidden; /* Hide any scrollbars */
         }
 
-        /* Container for the iframe */
         .iframe-container {
             position: relative;
-            width: 100%;
-            height: 300px; /* Adjust height as needed */
-            overflow: hidden; /* Hide overflow content */
+            width: 100vw; /* Full width of the viewport */
+            height: 100vh; /* Full height of the viewport */
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Ensure no scrollbars show */
         }
 
-        /* Styles for the iframe */
         iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-            display: block; /* Ensure no inline gaps */
-        }
-
-        /* Loading overlay */
-        .loading-overlay {
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
-            background: #191919; /* Matches the background */
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1; /* Ensure it is above the iframe */
-        }
-
-        /* Logo styles */
-        .logo {
-            width: 100px; /* Adjust the size as needed */
-            height: auto;
+            width: 100%; /* Ensure iframe covers full width */
+            height: 100%; /* Ensure iframe covers full height */
+            border: 0; /* Remove all borders */
+            display: block; /* Prevent inline display gaps */
         }
     </style>
 </head>
 <body>
     <div class="iframe-container">
-        <iframe id="chart-iframe" src="https://www.widgetbox.app/embed/clock/digital/kHRDKppWzSBhXTSbWKMtTK?flag=true"></iframe>
-        <div id="loading-overlay" class="loading-overlay">
-            <img src="/logo.png" alt="Loading..." class="logo">
-        </div>
+        <iframe src="https://www.widgetbox.app/embed/clock/digital/kHRDKppWzSBhXTSbWKMtTK?flag=true"></iframe>
     </div>
-
-    <script>
-        // Function to remove the loading overlay after iframe loads
-        document.getElementById('chart-iframe').onload = function () {
-            document.getElementById('loading-overlay').style.display = 'none';
-        };
-
-        // Optional: Adjust iframe height dynamically
-        function resizeIframe() {
-            const iframe = document.getElementById('chart-iframe');
-            try {
-                const iframeDocument = iframe.contentDocument || iframe.contentWindow.document;
-                const iframeContentHeight = Math.max(
-                    iframeDocument.body.scrollHeight,
-                    iframeDocument.documentElement.scrollHeight,
-                    iframeDocument.body.offsetHeight,
-                    iframeDocument.documentElement.offsetHeight,
-                    iframeDocument.body.clientHeight,
-                    iframeDocument.documentElement.clientHeight
-                );
-                iframe.style.height = iframeContentHeight + 'px';
-            } catch (e) {
-                console.warn("Unable to access iframe content for resizing: ", e);
-            }
-        }
-
-        // Resize iframe when window resizes (optional)
-        window.addEventListener('resize', resizeIframe);
-    </script>
 </body>
 </html>
